--- a/public/cdn/css/tmg-mobile.css
+++ b/public/cdn/css/tmg-mobile.css
@@ -2,7 +2,7 @@
 body { min-width:480px; /*max-width:800px;*/ overflow-x:hidden; padding:0px 0px 0px 0px;  padding-left:0px !important; padding-right:0px !important; margin-left:0px !important; margin-right:0px !important; }
 
 .mobile-only { display:block; }
-.non-mobile-only { display:none; }
+.non-mobile-only { display:none; visibility:hidden; }
 
 .bg-static { position:absolute; margin-top:0px; top:22px; }
 .body-work-single .bg-static { margin-top:0px; top:22px; }
@@ -60,3 +60,5 @@ body { min-width:480px; /*max-width:800px;*/ overflow-x:hidden; padding:0px 0px 
 
 .footer .footer-rules { position:absolute; left:0%; top:auto; bottom:0px; width:100%; }
 .footer .footer-address { position:absolute; left:40%; width:60%; border-right:none; height:80px; text-align:right; }
+
+.page-video-bttm .clmn-lf .clmn-lf-tp { border-bottom:solid 0px; }
